added !isp command: display the internet service provider of the specified client

--- a/extplugins/conf/plugin_location.ini
+++ b/extplugins/conf/plugin_location.ini
@@ -24,7 +24,10 @@ locate_failed: ^7Could not locate ^1$client
 distance: ^7$client ^3is ^7$distance ^3km away from you
 distance_self: ^7Sorry, I'm not that smart...meh!
 distance_failed: ^7Could not compute distance with ^1$client
+isp: ^7$client ^3is using ^7$isp ^3as isp
+isp_failed: ^7Could not retrieve ^1$client ^7isp
 
 [commands]
 locate: user
 distance: user
+isp: mod
